@@ -43,9 +43,9 @@
   '(set-face-background 'ace-jump-face-foreground "yellow"))
 
 ;; aggressive-indent
-(add-hook 'after-init-hook
-          '(lambda ()
-             (ignore-errors (global-aggressive-indent-mode 1))))
+;; (add-hook 'after-init-hook
+;;           '(lambda ()
+;;              (ignore-errors (global-aggressive-indent-mode 1))))
 
 ;; anzu
 (custom-set-variables
